fix: Wrong font sizes

--- a/themes/statusline/assets/sass/_variables.scss
+++ b/themes/statusline/assets/sass/_variables.scss
@@ -43,8 +43,8 @@ $background-color        :  $background-color-dark;
 // Typography
 //
 // font, color, headers, etc..
-$base-font-size       : 22px;
-$base-font-size-big   : 20px;
+$base-font-size       : 20px;
+$base-font-size-big   : 22px;
 $base-font-size-small : 16px;
 
 $text-color-light : $gray3;
